--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,9 @@
   </style>
 </head>
 <body>
-  <h1>HTML Content Sender</h1>
+  <h1>Clickbait detector</h1>
   <button id="checkButton">Check</button>
-  <div id="responseContent">Something here</div>
+  <div id="responseContent">Check the article for clickbaits</div>
   <script type="module" src="popup.js"></script>
 </body>
 </html>
