--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>HTML Content Sender</title>
-  <style>
-    body { width: 300px; padding: 10px; font-family: Arial, sans-serif; }
-    #responseContent { margin-top: 10px; white-space: pre-wrap; }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Clickguard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="popup.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Clickbait detector</h1>
-  <button id="checkButton">Check</button>
-  <div id="responseContent">Check the article for clickbaits</div>
+  <h2>Clickguard</h2>
+  <div class="text-center">
+    <button type="button" class="btn" id="checkButton">Check</button>
+  </div>
+  <div id="responseContent">Find out if the article is a clickbait</div>
   <script type="module" src="popup.js"></script>
 </body>
 </html>
